--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="real_time_location_sharing">实时位置共享</string>
     <string name="add_contacts">通讯录</string>
     <string name="title_activity_live">LiveActivity</string>
+    <string name="title_activity_work_plan">WorkPlanActivity</string>
+    <string name="title_activity_map_route_activity">MapRouteActivityActivity</string>
 
 </resources>
