--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,12 +18,13 @@
     <string name="title_activity_live">LiveActivity</string>
     <string name="title_activity_work_plan">WorkPlanActivity</string>
     <string name="title_activity_map_route_activity">MapRouteActivityActivity</string>
-    
-    <!-- 对话框所需要的字符串资源-->
+
+    <!-- 对话框所需要的字符串资源 -->
     <string name="dialog_message">该项工作已完成？</string>
     <string name="postive_button">确定</string>
     <string name="negative_button">取消</string>
     <string name="title_activity_push_deal">PushDealActivity</string>
     <string name="title_activity_splash_index">SplashIndexActivity</string>
+    <string name="title_activity_scanner">ScannerActivity</string>
 
 </resources>
